# singleton

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  singleton.h
.github/workflows/: ci.yaml  codeql.yaml
apps/: CMakeLists.txt  main.cpp
cmake/: CompileOptions.cmake  UseSanitizer.cmake  singleton-config.cmake
cmake/preset/: android.json  base.json  ios.json  linux.json  macos.json  windows.json
cmake/toolchain/: ios.cmake  ios_sim.cmake
example/: static_polymorphism_1.cpp  static_polymorphism_2.cpp
include/: singleton.h  singleton.hpp  singleton_atomic.hpp  singleton_dclp.h  singleton_dclp.hpp
src/: singleton.h
test/: CMakeLists.txt  test_cpp11.cpp  test_cpp17.cpp  test_cpp20.cpp  test_macro.h  test_main.cpp
